Bug 2312 - smbcacls and smbcquotas do not check // before the server
Summary: smbcacls and smbcquotas do not check // before the server
Status: RESOLVED FIXED
Alias: None
Product: Samba 3.0
Classification: Unclassified
Component: Client Tools (show other bugs)
Version: 3.0.9
Hardware: All Linux
: P3 minor
Target Milestone: none
Assignee: Björn Jacke
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-02-05 04:47 UTC by Pascal Terjan
Modified: 2023-07-05 11:35 UTC (History)
1 user (show)

See Also:


Attachments
Patch to check in smbc{acls,quotas} that the path begins by // (1.41 KB, patch)
2005-02-05 04:49 UTC, Pascal Terjan
no flags Details
Patch to check in smbc{acls,quotas} that the path begins by // (1001 bytes, patch)
2005-02-05 04:54 UTC, Pascal Terjan
no flags Details
backported patch for stable branches (1.61 KB, patch)
2023-06-06 14:06 UTC, Björn Jacke
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal Terjan 2005-02-05 04:47:29 UTC
The 2 first chars are removed, without testing this was // or \\.
Here is a patch to add this check.

Could not find a component for utils, please reaffect this bug to the right one...
Comment 1 Pascal Terjan 2005-02-05 04:49:41 UTC
Created attachment 947 [details]
Patch to check in smbc{acls,quotas} that the path begins by //
Comment 2 Pascal Terjan 2005-02-05 04:54:56 UTC
Created attachment 949 [details]
Patch to check in smbc{acls,quotas} that the path begins by //

Sorry, uploaded unsplitted patch
Comment 3 Samba QA Contact 2023-06-06 09:34:03 UTC
This bug was referenced in samba master:

fcedf5514b121914483bbc0ffe77580929093ac6
Comment 4 Björn Jacke 2023-06-06 14:06:49 UTC
Created attachment 17908 [details]
backported patch for stable branches
Comment 5 Jule Anger 2023-06-09 11:39:00 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 6 Samba QA Contact 2023-06-19 08:14:05 UTC
This bug was referenced in samba v4-18-test:

c7e3c042fbc56824f66652af7c0580276f5144e7
Comment 7 Jule Anger 2023-06-19 08:55:58 UTC
autobuild-v4-17-test failed several times with
  failure for task samba-h5l-build during make

Reassigning to Björn. Please check.
Comment 8 Björn Jacke 2023-06-19 19:20:27 UTC
I don't think that this commit is related with those build failures. But as we had this issue for so many years, it won't be a big deal if we leave 4.17 unfixed. Closing this as fixed now.
Comment 9 Samba QA Contact 2023-07-05 11:35:45 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.4):

c7e3c042fbc56824f66652af7c0580276f5144e7